# Seitai_Rust

./: Cargo.toml
src/: game.rs  lib.rs  main.glade  main.glade~  main.rs
src/living/: grass.rs  living.rs  mod.rs
src/world/: world.rs
