[package]
name = "rust_seitai"
version = "0.1.0"
authors = ["shunby <taby@outlook.jp>"]
edition = "2018"

[dependencies]
image = "*"
gio= "0.6.0"
cairo-rs = "0.6.0"
glib = "0.7.1"
gdk-pixbuf = "0.6.0"
gdk = "0.10.0"
lazy_static = "1.3.0"
rand = "0.6.5"
[dependencies.gtk]
version = "0.6.0"
features = ["v3_16"]
